# visa_bulletin

./: .bazelrc  .cursorrules  .dockerignore  .gitignore  AGENTS.md  ANALYTICS_OPTIONS.md  ANALYTICS_QUICKSTART.md  BAZEL.md  BUILD  COMPANY_REPORT_CARD_DESIGN.md  CONTRIBUTING.md  DATA_ANALYSIS.md  DEPLOYMENT.md  DEPLOYMENT_AWS.md  DEPLOYMENT_SEO_CHECKLIST.md  DEPLOYMENT_ZERO_DOWNTIME.md  DEPLOY_LIGHTSAIL_STEPS.md  DESIGN_OPTIONS.md  DEV_SETUP.md  DOCKER_DEPLOYMENT.md  DOCKER_IMPLEMENTATION_SUMMARY.md  DOCKER_QUICKSTART.md  DOMAIN_ACQUISITION_GUIDE.md  DOMAIN_SUGGESTIONS.md  Dockerfile  EB1_EXPLANATION.txt  FEATURE_IDEAS.md  IMPLEMENTATION_PLAN.md  IMPROVEMENTS_COMPLETED.md  LEGACY_PARSER_SUCCESS.md  LIGHTSAIL_SSH_SETUP.md  MIGRATION_TO_DOCKER.md  MODULE.bazel  PAGESPEED_OPTIMIZATIONS.md  PRODUCTION_CLEANUP.md  PROJECT_SUMMARY.md  QUICK_DEPLOY.md  README.md  ROLLOUT_FLOW.md  SALARY_DATABASE_DESIGN.md  (+21 more)
deployment/: DOMAIN_SETUP.md  README.md
django_config/: BUILD  __init__.py  context_processors.py  logging_config.py  settings.py  settings_production.py  urls.py  wsgi.py
extractors/: BUILD  bulletin_extractor.py  bulletin_handler.py
lib/: BUILD  bulletint_parser.py  chart_builder.py  dashboard_service.py  projection.py  publication_data.py  table.py  visa_class_utils.py
models/: BUILD  __init__.py  apps.py  bulletin.py  visa_cutoff_date.py
saved_pages/: BUILD  visa-bulletin-for-april-2002.html  visa-bulletin-for-april-2003.html  visa-bulletin-for-april-2004.html  visa-bulletin-for-april-2005.html  visa-bulletin-for-april-2006.html  visa-bulletin-for-april-2007.html  (+278 more)
(+59 files in other folders)
