# Bazel module for Visa Bulletin Parser

module(
    name = "visa_bulletin",
    version = "1.0.0",
)

# Python rules
bazel_dep(name = "rules_python", version = "0.40.0")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")

pip.parse(
    hub_name = "visa_bulletin_pip",
    python_version = "3.11",
    requirements_lock = "//:requirements.txt",
)

use_repo(pip, "visa_bulletin_pip")
